apps/pricebuddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricebuddy
  namespace: pricebuddy
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: pricebuddy
  type: ClusterIP
